--- a/index_sesion03.html
+++ b/index_sesion03.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-    <header>
+    <header class="container-header">
+        <h1>Header</h1>
         <nav></nav>
     </header>
 
