--- a/index_sesion03.html
+++ b/index_sesion03.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,8 @@
     <link rel="stylesheet" href="estilos03.css">
     <title>Document</title>
 </head>
-<body>
 
+<body>
     <header class="container-header">
         <h1>Header</h1>
         <nav></nav>
@@ -16,11 +17,39 @@
 
     <main></main>
 
-    <section>
+        <section>
+        
+        <video controls>
+            <source
+              type="video/webm"
+              src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm"
+            />
+            <source
+              type="video/mp4"
+              src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"
+            />
+          </video>
+
+          <iframe width="420" height=315          
+          src="https://www.youtube.com/embed/tgbNymZ7vqY"
+          >
+          </iframe>
+
+
         <p>
             este es un parrafo de prueba.
         </p>
-    </section>
+        </section>
+
+        <section class="container-section-promo">
+
+            <video controls></video>
+
+            <article class="item-article">
+                
+            </article>
+
+        </section>
 
     <footer></footer>
 
