task_001 Sesion03_Reto02

--- a/index_sesion03.html
+++ b/index_sesion03.html
@@ -1,4 +1,4 @@
-<! -- Comment in Develop branch -->
+<! -- Comment in  task/001/MultimediaVideo -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -19,39 +19,21 @@
 
     <main></main>
 
-        <section>
-        
-        <video controls>
-            <source
-              type="video/webm"
-              src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm"
-            />
-            <source
-              type="video/mp4"
-              src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"
-            />
-          </video>
-
-          <iframe width="420" height=315          
-          src="https://www.youtube.com/embed/tgbNymZ7vqY"
-          >
-          </iframe>
-
-
-        <p>
-            este es un parrafo de prueba.
-        </p>
-        </section>
-
-        <section class="container-section-promo">
-
-            <video controls></video>
-
-            <article class="item-article">
-                
-            </article>
-
-        </section>
+    <section>
+        <video
+          controls
+          poster="https://cdn.videvo.net/videvo_files/video/premium/video0036/thumbnails/computer_code00_small.jpg"
+        >
+          <source
+            type="video/webm"
+            src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm"
+          />
+          <source
+            type="video/mp4"
+            src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"
+          />
+        </video>
+      </section>
 
     <footer></footer>
 
